<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:showDividers="none" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acerca"
        android:fontFamily="sans-serif"
        android:textColor="@color/gray"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/gray" />
    
    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="5dp" />

    
     <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo" />
            </RelativeLayout>

            <View
                android:id="@+id/view6"
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/desarrollo1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:id="@+id/view3"
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:text="@string/desarrollo2" />

            <View
                android:id="@+id/view4"
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/btnLicencias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desarrollo3" />

            <Button
                android:id="@+id/btnyop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/autor" />
        </LinearLayout>
        
	</ScrollView>

</LinearLayout>